// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Logo with link 1`] = `
<a
  href="/"
>
  <picture>
    <source
      media="(max-width: 829px)"
      srcset="https://assets.kununu.com/images/footer/logo-mobile.svg"
    />
    <source
      media="(min-width: 830px)"
      srcset="https://assets.kununu.com/images/footer/logo-desktop.svg"
    />
    <img
      alt="test"
      aria-hidden="true"
      class="logo"
      rel="presentation"
      src="https://assets.kununu.com/images/footer/logo-desktop.svg"
    />
  </picture>
</a>
`;

exports[`Renders Logo without crashing 1`] = `
<picture>
  <source
    media="(max-width: 829px)"
    srcset="https://assets.kununu.com/images/footer/logo-mobile.svg"
  />
  <source
    media="(min-width: 830px)"
    srcset="https://assets.kununu.com/images/footer/logo-desktop.svg"
  />
  <img
    alt="test"
    aria-hidden="true"
    class="logo"
    rel="presentation"
    src="https://assets.kununu.com/images/footer/logo-desktop.svg"
  />
</picture>
`;
